zzz-02-developers/02-tenants/superhero-battle/base/battle-ui/app/battle-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ui-super-heroes
    application: super-heroes
    system: quarkus-super-heroes
  name: ui-super-heroes
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: ui-super-heroes
    application: super-heroes
  type: ClusterIP
