zzz-02-developers/02-tenants/superhero-battle/base/battle-ui/app/battle-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ui-super-heroes
  labels:
    app: ui-super-heroes
    application: super-heroes
    system: quarkus-super-heroes
spec:
  to:
    kind: Service
    name: ui-super-heroes
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
